# certinize-api-gateway

./: .env.example  .gitignore  .pylintrc  Makefile  Procfile  README.md  app.json  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pylint.yml  python-app.yml
app/: main.py  utils.py
app/api/api_v1/: __init__.py
app/core/: abc.py  config.py  events.py  exceptions.py
app/core/settings/: app.py  base.py  dev.py  prod.py
app/db/: __init__.py  crud.py  events.py
app/db/repositories/: configurations.py  templates.py
app/models/: __init__.py
app/models/domain/: __init__.py  app_model.py  appmodel.py  certificate.py  configuration.py  issuance.py  template.py  user.py  users.py
app/models/domains/: __init__.py  users.py
app/models/schemas/: certificates.py  configurations.py  fonts.py  templates.py  users.py
app/services/: blockchain_api.py  events.py  filebase.py  image_processor.py  imagekit.py  object_processor.py  security.py
docs/: get_started.md  tasks.md
typings/asyncpg/: __init__.pyi  cluster.pyi  compat.pyi  connect_utils.pyi  connection.pyi  connresource.pyi  cursor.pyi  introspection.pyi  pool.pyi  prepared_stmt.pyi  serverversion.pyi  transaction.pyi  types.pyi
typings/asyncpg/_testbase/: __init__.pyi  fuzzer.pyi
typings/asyncpg/exceptions/: _base.pyi  (+1 more)
typings/imagekitio/: __init__.pyi  client.pyi  file.pyi  resource.pyi  url.pyi
typings/passlib/: context.pyi  exc.pyi  ifc.pyi  registry.pyi
typings/sortedcontainers/: sorteddict.pyi  sortedlist.pyi  sortedset.pyi
(+48 files in other folders)
