[tool.poetry]
authors = ["Hju Kneyck Flores <hjucode@gmail.com>"]
description = ""
name = "app"
version = "0.1.0"

[tool.poetry.dependencies]
Pillow = "^9.2.0"
PyNaCl = "^1.5.0"
aiobotocore = "^2.3.4"
aiosql = "^3.4.1"
asyncpg = "^0.25.0"
gunicorn = "^20.1.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
python = "3.10.6"
python-multipart = "^0.0.5"
solana = "^0.25.1"
sqlmodel = "^0.0.6"
starlite = "^1.2.3"
uvicorn = {extras = ["standard"], version = "^0.17.5"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pylint = "^2.12.2"
pyright = "^0.0.13"
pytest = "^5.2"
types-aiobotocore = {extras = ["s3"], version = "^2.3.4"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
